# midi-go-round

./: CMakeLists.txt  README.md
Code/: GameManager.cpp  GameManager.h  GameStates.cpp  GameStates.h  Level.cpp  Level.h  MidiPlayer.cpp  MidiPlayer.h  main.cpp
Content/fonts/: font.material.xml
Content/materials/: dynamic.material.xml  metal.material.xml  star.material.xml  translucent.material.xml
Content/models/note/: lambert1.material.xml  note.geo  note.scene.xml
Content/models/pinwheel/: anisotropic1.material.xml  anisotropic1.material.xml~  anisotropic2.material.xml  blinn1.material.xml  blinn1.material.xml~  test.geo  test.scene.xml  test.scene.xml~
Content/models/skybox/: skybox.material.xml
Content/particles/coloredShapes/: coloredShapes.scene.xml  coloredShapes.xml
Content/particles/fire/: fire.particle.xml  fire.scene.xml
Content/particles/glowingBall/: glowingBall.material.xml  glowingBall.particle.xml  glowingBall.scene.xml
Content/particles/noteExplosion/: noteExplosion.material.xml  noteExplosion.particle.xml  noteExplosion.scene.xml
Content/pipelines/: deferred.pipeline.xml  forward.pipeline.xml  globalSettings.material.xml  hdr.pipeline.xml  postHDR.material.xml
Content/shaders/: model.shader  particle.shader  skybox.shader
Content/textures/: gold.dds
Libs/: CMakeLists.txt
Libs/Horde3D_SDK_1.0.0_Beta5/: CMakeLists.txt
Libs/Horde3D_SDK_1.0.0_Beta5/Horde3D/: CMakeLists.txt
Libs/Horde3D_SDK_1.0.0_Beta5/Horde3D/Bindings/C++/: Horde3D.h
Libs/Horde3D_SDK_1.0.0_Beta5/Horde3D/Docs/html/: _pipeline.html
Libs/Horde3D_SDK_1.0.0_Beta5/Horde3D/Source/: CMakeLists.txt
Libs/Horde3D_SDK_1.0.0_Beta5/Horde3D/Source/Horde3DEngine/: egMain.cpp  egModel.cpp  egModel.h  egRenderer.cpp  egScene.h  egShader.h
Libs/fluidsynth-1.1.6/: CMakeLists.txt
Libs/glfw/: CMakeLists.txt
Midis/: beatles.mid
(+3 files in other folders)
